3822B1PE3/1_gelu_omp/kazunin_nikita/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp: In function ‘std::vector<float> GeluOMP(const std::vector<float>&)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:10: error: ‘ptrdiff_t’ was not declared in this scope; did you mean ‘std::ptrdiff_t’?
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |          ^~~~~~~~~
      |          std::ptrdiff_t
In file included from /usr/include/c++/11/bits/stl_algobase.h:59,
                 from /usr/include/c++/11/vector:60,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.h:4,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:1:
/usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h:281:33: note: ‘std::ptrdiff_t’ declared here
  281 |   typedef __PTRDIFF_TYPE__      ptrdiff_t;
      |                                 ^~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:19: error: expected ‘;’ before ‘i’
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |                   ^~
      |                   ;
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:20: error: ‘i’ was not declared in this scope
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |                    ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:43: error: ‘ptrdiff_t’ does not name a type
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |                                           ^~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:4:1: note: ‘ptrdiff_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
    3 | #include <omp.h>
  +++ |+#include <cstddef>
    4 | 
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:56: error: expected ‘)’ before ‘;’ token
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |         ~                                              ^
      |                                                        )
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:5: error: expected iteration declaration or initialization
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |     ^~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/1_gelu_omp/kazunin_nikita/gelu_omp.cpp:19:60: error: ‘i’ was not declared in this scope
   19 |     for (ptrdiff_t i = 0; i < static_cast<ptrdiff_t>(n); ++i) {
      |                                                            ^
